# network-can

./: CHANGELOG.md  NOTES  README.md  cabal.project.local.ci  network-can.cabal
.github/workflows/: ci.yaml
app/: CANBridge.hs  CANDump.hs  HCANBridge.hs  HCANDump.hs  SLCANSerial.hs  SLCANUDP.hs
src/Network/: CAN.hs  SLCAN.hs  SocketCAN.hs
src/Network/CAN/: Class.hs  Monad.hs  Test.hs  Types.hs
src/Network/SLCAN/: Builder.hs  Parse.hs  Parser.hs  Types.hs
src/Network/SocketCAN/: Bindings.hsc  Example.hs  LowLevel.hs  Translate.hs
test/: SLCANSpec.hs  Samples.hs  SocketCANSpec.hs
